jsoup changelog

*** Release 1.14.1 [PENDING]
  * Change: updated the minimum supported Java version from Java 7 to Java 8.

  * Change: updated the minimum Android API level from 8 to 10.

  * Change: although Node#childNodes() returns an UnmodifiableList as a view into its children, it was still
    directly backed by the internal child list. That made some uses, such as looping and moving those children to
    another element, throw a ConcurrentModificationException. Now this method returns its own list so that they are
    separated and changes to the parent's contents will not impact the children view. This aligns with similar methods
    such as Element#children(). If you have code that iterates this list and makes parenting changes to its contents,
    you may need to make a code update.
    <https://github.com/jhy/jsoup/issues/1431>

  * Improvement: renamed the Whitelist class to Safelist, with the goal of more inclusive language. A shim is provided
    for backwards compatibility (source and binary). This shim is marked as deprecated and will be removed in the
    jsoup 1.15.1 release.
    <https://github.com/jhy/jsoup/pull/1464>

  * Improvement: added support for Internationalized Domain Names (IDNs) in Jsoup.Connect.
    <https://github.com/jhy/jsoup/issues/1300>

  * Improvement: added support for loading and parsing gzipped HTML files in Jsoup.parse(File in, charset, baseUri).

  * Improvement: reduced thread contention in HttpConnection and Document.
    <https://github.com/jhy/jsoup/pull/1455>

  * Improvement: better parsing performance when under high thread concurrency
    <https://github.com/jhy/jsoup/pull/1402>

  * Improvement: added Element#id(String) ID attribute setter.

  * Improvement: in Document, #body() and #head() accessors will now automatically create those elements, if they were
    missing (e.g. if the Document was not parsed from HTML). Additionally, the #body() method returns the frameset